# Splitter

./: .gitignore  PRD.md  README.md  main.py  pyproject.toml  rag_chat.py  serve.py
api/: __init__.py  app.py  dependencies.py  errors.py  logging.py  schemas.py
evals/: __init__.py  cli.py  dataset_generation.py  metrics_generation.py  metrics_retrieval.py  models.py  reporting.py  stage_runner.py
rag-frontend/: package-lock.json  package.json
rag_demo/: __init__.py  answering.py  chunking.py  cleaning.py  embeddings.py  llm.py  loaders.py  models.py  parent_recall.py  pipeline.py  query_rewrite.py  rerank.py  reranker_runtime.py  retrieval.py  storage.py
runtime/: __init__.py  container.py  settings.py
services/: __init__.py  chat_graph_service.py  chat_service.py  errors.py  exceptions.py  ingest_service.py  logging_utils.py  task_models.py  task_registry.py  task_service.py
tests/: test_answering.py  test_api_app.py  test_api_chat.py  test_api_errors.py  test_api_health.py  test_api_ingest.py  test_api_logging.py  test_api_tasks.py  test_batch.py  test_chat_graph_builder.py  test_chat_graph_nodes.py  test_chat_graph_service.py  test_chat_graph_state.py  test_chat_logging.py  test_chat_service.py  test_chunking.py  test_cleaning.py  test_dataset_generation.py  test_embeddings.py  test_eval_cli.py  test_eval_models.py  test_eval_reporting.py  test_ingest_logging.py  test_ingest_service.py  test_llm.py  test_main_cli.py  test_metrics_generation.py  test_metrics_retrieval.py  test_parent_recall.py  test_pdf_loading.py  test_pipeline.py  test_query_rewrite.py  (+12 more)
(+18 files in other folders)
