[project]
name = "splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "fastembed>=0.8.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "mlflow>=3.11.1",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "python-multipart>=0.0.20",
    "pytest>=9.0.3",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.4.0",
    "uvicorn>=0.38.0",
]
